...
        android:id="@+id/mainHomeFragment"
        android:name="com.a02.draw.feature.home.screen.home.HomeFragment" />
    <fragment
        android:id="@+id/emojiMixHomeFragment"
        android:name="com.a02.draw.feature.home.screen.emojimix.EmojiMixHomeFragment" />
    <fragment
        android:id="@+id/emojiMixPickerFragment"
        android:name="com.a02.draw.feature.home.screen.emojimix.EmojiMixPickerFragment">
        <argument
            android:name="mode"
            android:defaultValue="MIX_2"
            app:argType="string" />
    </fragment>
...
